...
                android:paddingStart="?android:attr/scrollbarSize"
                android:paddingEnd="?android:attr/scrollbarSize"
                android:layout_marginTop="5dp">


                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/macro_activity_macro_name_label" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
...
                android:layout_below="@+id/input_name_layout"
                android:paddingStart="?android:attr/scrollbarSize"
                android:paddingEnd="?android:attr/scrollbarSize">

                <com.wanderfar.expander.DynamicValue.DynamicValueEditText
                    xmlns:custom="http://schemas.android.com/apk/res/com.wanderfar.expander"
                    android:id="@+id/input_phrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/macro_activity_phrase_label"
                    custom:displayDrawableForDynamicValue="true"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/dynamic_value_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/macro_activity_dynamic_value_button_text"
                android:layout_below="@+id/input_phrase_layout"
                android:layout_centerHorizontal="true"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
...
                android:layout_below="@+id/dynamic_value_button"
                android:paddingStart="?android:attr/scrollbarSize"
                android:paddingEnd="?android:attr/scrollbarSize"
                >

                <EditText
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/macro_activity_macro_description_label" />

            </android.support.design.widget.TextInputLayout>

...
                        />

                </RelativeLayout>

                <android.support.v7.widget.SwitchCompat
                    android:layout_below="@+id/input_description_layout"
                    android:id="@+id/case_sensitive_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>
...
