<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_trash"
        android:title="@string/menu_macro_delete_shortcut"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_save"
        android:title="@string/menu_macro_save_shortcut_title"
        android:icon="@drawable/ic_save"
        app:showAsAction="ifRoom"
        />

</menu>